syntax = "proto3";

package protogen;

import "google/api/annotations.proto";

option go_package = "./todo";


service Todo {
    rpc createTodo(TodoItem) returns ( TodoItem );
    rpc readTodos(void) returns (TodoItems) {
        option (google.api.http) = {
            get: "/v1/todos"
        };
    }
}
message void {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}
